<resources>
    <string name="app_name">HelloWorld</string>
    <string name="button_label1">button 1</string>
    <string name="button_label2">button 2</string>
    <string name="button_label3">button 3</string>
    <string name="button_label4">button 4</string>
    <string name="button_label5">button 5</string>
    <string name="button_label6">button 6</string>
    <string name="button_label7">button 7</string>
    <string name="button_label8">button 8</string>
    <string name="button_label9">button 9</string>
    <string name="button_label10">button 10</string>
    <string name="title">Android practice</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="img_info">img</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="check_box_text">Remember me</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="log_in_btn">Login</string>
    <string name="connectWith">or connect with</string>
    <string name="sign_up_with">Sign Up with E-mail</string>
</resources>